@@ -1,0 +1,3 @@
+MD5 d3af90ec3e0d41c58e9a4fe2dcd2a068 gHamachi_0.8.1.tar.gz 76527
+RMD160 e3dcc76459bdf3438d95941fd91327cbfde004be gHamachi_0.8.1.tar.gz 76527
+SHA256 c13eeea865efeb0286b5c1f55ff4f84c52c52411e3a66c0f71980038e66057b3 gHamachi_0.8.1.tar.gz 76527
