@@ -1,6 +1,11 @@
 # ChangeLog for net-misc/ghamachi
-# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/ghamachi/Attic/ChangeLog,v 1.2 2006/09/22 12:19:51 caleb Exp $
+# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-misc/ghamachi/Attic/ChangeLog,v 1.3 2007/05/18 12:37:52 caleb Exp $
+
+*ghamachi-0.8.1 (18 May 2007)
+
+  18 May 2007; Caleb Tennis <caleb@gentoo.org> +ghamachi-0.8.1.ebuild:
+  version bump, per bug #158224
 
   22 Sep 2006; Caleb Tennis <caleb@gentoo.org> ghamachi-0.7.3.ebuild:
   Change ebuild to just build gtk2 package, and get rid of gtk2 use flag
